Make buttons add\del weather blocks

--- a/page.html
+++ b/page.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Weather Website</title>
     <link href="styles.css" rel="stylesheet" type="text/css">
+
+    <script src="weather_dom.js" type="text/javascript"></script>
     <script src="weather_req.js" type="text/javascript"></script>
     <script src="weather.js" type="text/javascript"></script>
 </head>
@@ -84,500 +86,20 @@
         </div>
     </div>
 
+    <ul class="wtr-list">
+        <div class="wtr-block">
+            <h2 class="wtr-header">
+                Избранное
+            </h2>
+        </div>
+
+        <div class="wtr-block">
+            <button id="add-city-btn" class="func-btn">Добавить город</button>
+        </div>
+    </ul>
+
     <div class="wtr-block-cont">
-        <ul class="wtr-list">
-            <div class="wtr-block">
-                <h2 class="wtr-header">
-                    Избранное
-                </h2>
-            </div>
-
-            <div class="wtr-block">
-                    <button class="func-btn">Добавить город</button>
-            </div>
-
-
-            <div class="wtr-block">
-                    <div class="wtr-header">
-                        <h3 class="wtr-city-name">
-                            Moscow
-                        </h3>
-                        <span class="wtr-temp">
-                        5°C
-                        </span>
-                        <img src="img/icon-set/PNG/50x50/cloudy.png" class="wtr-icon" alt="Иконка погоды">
-                        <button class="wtr-cls-btn">&times;</button>
-                    </div>
-
-                    <ul>
-                        <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                            <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                        </div>
-
-                        <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                            <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                        </div>
-
-                        <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                            <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                        </div>
-
-                        <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                            <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                        </div>
-
-                        <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                            <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                        </div>
-                    </ul>
-                </div>
-
-            <div class="wtr-block">
-                <div class="wtr-header">
-                    <h3 class="wtr-city-name">
-                        Moscow
-                    </h3>
-                    <span class="wtr-temp">
-                        5°C
-                        </span>
-                    <img src="img/icon-set/PNG/50x50/cloudy.png" class="wtr-icon" alt="Иконка погоды">
-                    <button class="wtr-cls-btn">&times;</button>
-                </div>
-
-                <ul>
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-                </ul>
-            </div>
-
-            <div class="wtr-block">
-                <div class="wtr-header">
-                    <h3 class="wtr-city-name">
-                        Moscow
-                    </h3>
-                    <span class="wtr-temp">
-                        5°C
-                        </span>
-                    <img src="img/icon-set/PNG/50x50/cloudy.png" class="wtr-icon" alt="Иконка погоды">
-                    <button class="wtr-cls-btn">&times;</button>
-                </div>
-
-                <ul>
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-                </ul>
-            </div>
-
-            <div class="wtr-block">
-                <div class="wtr-header">
-                    <h3 class="wtr-city-name">
-                        Moscow
-                    </h3>
-                    <span class="wtr-temp">
-                        5°C
-                        </span>
-                    <img src="img/icon-set/PNG/50x50/cloudy.png" class="wtr-icon" alt="Иконка погоды">
-                    <button class="wtr-cls-btn">&times;</button>
-                </div>
-
-                <ul>
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-                </ul>
-            </div>
-
-            <div class="wtr-block">
-                <div class="wtr-header">
-                    <h3 class="wtr-city-name">
-                        Moscow
-                    </h3>
-                    <span class="wtr-temp">
-                        5°C
-                        </span>
-                    <img src="img/icon-set/PNG/50x50/cloudy.png" class="wtr-icon" alt="Иконка погоды">
-                    <button class="wtr-cls-btn">&times;</button>
-                </div>
-
-                <ul>
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-                </ul>
-            </div>
-
-            <div class="wtr-block">
-                <div class="wtr-header">
-                    <h3 class="wtr-city-name">
-                        Moscow
-                    </h3>
-                    <span class="wtr-temp">
-                        5°C
-                        </span>
-                    <img src="img/icon-set/PNG/50x50/cloudy.png" class="wtr-icon" alt="Иконка погоды">
-                    <button class="wtr-cls-btn">&times;</button>
-                </div>
-
-                <ul>
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-                </ul>
-            </div>
-
-            <div class="wtr-block">
-                <div class="wtr-header">
-                    <h3 class="wtr-city-name">
-                        Moscow
-                    </h3>
-                    <span class="wtr-temp">
-                        5°C
-                        </span>
-                    <img src="img/icon-set/PNG/50x50/cloudy.png" class="wtr-icon" alt="Иконка погоды">
-                    <button class="wtr-cls-btn">&times;</button>
-                </div>
-
-                <ul>
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-                </ul>
-            </div>
-
-            <div class="wtr-block">
-                <div class="wtr-header">
-                    <h3 class="wtr-city-name">
-                        Moscow
-                    </h3>
-                    <span class="wtr-temp">
-                        5°C
-                        </span>
-                    <img src="img/icon-set/PNG/50x50/cloudy.png" class="wtr-icon" alt="Иконка погоды">
-                    <button class="wtr-cls-btn">&times;</button>
-                </div>
-
-                <ul>
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-
-                    <div class="feat-cont">
-                        <span class="feat-name">
-                            Ветер
-                        </span>
-                        <span class="feat-val">
-                            Moderate breeze, 6.0 m/s, North-northwest
-                        </span>
-                    </div>
-                </ul>
-            </div>
-
-
+        <ul id="wtr-blocks-cont" class="wtr-list">
         </ul>
     </div>
 
