Add city name input field

--- a/page.html
+++ b/page.html
@@ -94,6 +94,9 @@
         </div>
 
         <div class="wtr-block">
+            <label>
+                <input id="city-name-input" name="cityName" type="text" placeholder="Название города"/>
+            </label>
             <button id="add-city-btn" class="func-btn">Добавить город</button>
         </div>
     </ul>
