--- a/page.html
+++ b/page.html
@@ -7,6 +7,7 @@
 
     <script src="weather_dom.js" type="text/javascript"></script>
     <script src="weather_req.js" type="text/javascript"></script>
+    <script src="weather_add_city.js" type="text/javascript"></script>
     <script src="weather.js" type="text/javascript"></script>
 </head>
 <body>
