--- a/page.html
+++ b/page.html
@@ -8,7 +8,7 @@
     <script src="weather_dom.js" type="text/javascript"></script>
     <script src="weather_req.js" type="text/javascript"></script>
     <script src="weather_add_city.js" type="text/javascript"></script>
-    <script src="weather.js" type="text/javascript"></script>
+    <script src="weather_update_main.js" type="text/javascript"></script>
 </head>
 <body>
 <header>
@@ -19,13 +19,11 @@
             </h1>
         </div>
         <div class="wtr-block">
-            <button class="func-btn">Обновить геолокацию</button>
+            <button id="update-main-btn" class="func-btn">Обновить геолокацию</button>
         </div>
     </div>
-</header>
 
-<main>
-    <div class="wtr-list">
+    <div id="wtr-main-block" class="wtr-list">
         <div id="wtr-main" class="wtr-block">
             <h2 class="wtr-city-name">
                 Saint-Petersburg
@@ -86,7 +84,9 @@
             </ul>
         </div>
     </div>
+</header>
 
+<main>
     <ul class="wtr-list">
         <div class="wtr-block">
             <h2 class="wtr-header">
