Make cityname textfield react to enter key

--- a/page.html
+++ b/page.html
@@ -10,6 +10,7 @@
     <script src="weather_req.js" type="text/javascript"></script>
     <script src="weather_add_city.js" type="text/javascript"></script>
     <script src="weather_update_main.js" type="text/javascript"></script>
+    <script src="weather.js" type="text/javascript"></script>
 </head>
 <body>
 <header>
