Make buttons smaller

--- a/page.html
+++ b/page.html
@@ -17,13 +17,13 @@
 </head>
 <body>
 <header>
-    <div class="wtr-list">
+    <div id="header" class="wtr-list">
         <div class="wtr-block">
             <h1 class="wtr-header">
                 Погода здесь
             </h1>
         </div>
-        <div class="wtr-block">
+        <div id="geo-btn-block" class="wtr-block">
             <button id="update-main-btn" class="func-btn">Обновить геолокацию</button>
         </div>
     </div>
