--- a/page.html
+++ b/page.html
@@ -5,9 +5,11 @@
 
     <meta charset="UTF-8">
     <title>Weather Website</title>
+
+    <link href="general.css" rel="stylesheet" type="text/css">
+    <link href="main.css" rel="stylesheet" type="text/css">
     <link href="styles.css" rel="stylesheet" type="text/css">
     <link href="loader.css" rel="stylesheet" type="text/css">
-
 
     <script src="weather_dom.js" type="text/javascript"></script>
     <script src="weather_req.js" type="text/javascript"></script>
@@ -17,39 +19,35 @@
 </head>
 <body>
 <header>
-    <div id="header" class="wtr-list">
-        <div class="wtr-block">
-            <h1 class="wtr-header">
+    <section class="wtr-list">
+        <h1 class="wtr-header-text wtr-block">
                 Погода здесь
-            </h1>
-        </div>
+        </h1>
+
         <div id="geo-btn-block" class="wtr-block">
             <button id="update-main-btn" class="func-btn">Обновить геолокацию</button>
         </div>
-    </div>
+    </section>
 </header>
 
 <main>
-    <ul class="wtr-list">
-        <div class="wtr-block">
-            <h2 class="wtr-header">
+    <section class="wtr-list">
+            <h2 class="wtr-header-text wtr-block">
                 Избранное
             </h2>
-        </div>
 
-        <div class="wtr-block">
-            <label>
-                <input id="city-name-input" name="cityName" type="text" placeholder="Название города"/>
-            </label>
-            <button id="add-city-btn" class="func-btn">Добавить город</button>
-        </div>
-    </ul>
+            <div class="wtr-block">
+                <label>
+                    <input id="city-name-input" name="cityName" type="text" placeholder="Название города"/>
+                </label>
+                <button id="add-city-btn" class="func-btn">Добавить город</button>
+            </div>
+    </section>
 
-    <div class="wtr-block-cont">
+    <section>
         <ul id="wtr-blocks-cont" class="wtr-list">
         </ul>
-    </div>
-
+    </section>
 </main>
 
 <footer>
