--- a/lab1/lab1_page.html
+++ b/lab1/lab1_page.html
@@ -1,171 +1,93 @@
+<!DOCTYPE html>
 <html lang="ru">
-   <head>
-      <link rel="icon" sizes="32x32" type="image/png" href="img/favicon.png">
-      <meta charset="UTF-8">
-      <title>Weather Website</title>
-
-      <link href="css/general.css" rel="stylesheet" type="text/css">
-      <link href="css/main.css" rel="stylesheet" type="text/css">
-      <link href="css/styles.css" rel="stylesheet" type="text/css">
-      <link href="css/loader.css" rel="stylesheet" type="text/css">
-   </head>
-   <body class="vsc-initialized">
-      <main>
-         <section>
-            <ul id="wtr-blocks-cont" class="wtr-list">
-               <li class="wtr-block">
-                  <section class="wtr-block">
-                     <div class="wtr-header">
-                        <h3 class="wtr-city-name">Yakutsk</h3>
-                        <ul class="wtr-header"><span class="wtr-temp">-13°C</span><img alt="Иконка погоды" src="http://openweathermap.org/img/wn/01n@2x.png" class="wtr-icon"><button class="wtr-upd-btn">Обновить</button><button class="wtr-cls-btn">×</button></ul>
-                     </div>
-                     <ul class="feat-list">
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Ощущается как</span><span class="feat-val">-19.27 °C</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Ветер</span><span class="feat-val">4 м/c</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Облачность</span><span class="feat-val">0%</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Давление</span><span class="feat-val">1008 гПа</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Влаженость</span><span class="feat-val">72%</span></div>
-                        </li>
-                     </ul>
-                  </section>
-               </li>
-               <li class="wtr-block">
-                  <section class="wtr-block">
-                     <div class="wtr-header">
-                        <h3 class="wtr-city-name">New York</h3>
-                        <ul class="wtr-header"><span class="wtr-temp">4.1°C</span><img alt="Иконка погоды" src="http://openweathermap.org/img/wn/01d@2x.png" class="wtr-icon"><button class="wtr-upd-btn">Обновить</button><button class="wtr-cls-btn">×</button></ul>
-                     </div>
-                     <ul class="feat-list">
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Ощущается как</span><span class="feat-val">-1.83 °C</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Ветер</span><span class="feat-val">5.14 м/c</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Облачность</span><span class="feat-val">1%</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Давление</span><span class="feat-val">1034 гПа</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Влаженость</span><span class="feat-val">61%</span></div>
-                        </li>
-                     </ul>
-                  </section>
-               </li>
-               <li class="wtr-block">
-                  <section class="wtr-block">
-                     <div class="wtr-header">
-                        <h3 class="wtr-city-name">Paris</h3>
-                        <ul class="wtr-header"><span class="wtr-temp">10.7°C</span><img alt="Иконка погоды" src="http://openweathermap.org/img/wn/01d@2x.png" class="wtr-icon"><button class="wtr-upd-btn">Обновить</button><button class="wtr-cls-btn">×</button></ul>
-                     </div>
-                     <ul class="feat-list">
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Ощущается как</span><span class="feat-val">4.17 °C</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Ветер</span><span class="feat-val">6.69 м/c</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Облачность</span><span class="feat-val">0%</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Давление</span><span class="feat-val">1017 гПа</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Влаженость</span><span class="feat-val">50%</span></div>
-                        </li>
-                     </ul>
-                  </section>
-               </li>
-               <li class="wtr-block">
-                  <section class="wtr-block">
-                     <div class="wtr-header">
-                        <h3 class="wtr-city-name">Yakutsk</h3>
-                        <ul class="wtr-header"><span class="wtr-temp">-13°C</span><img alt="Иконка погоды" src="http://openweathermap.org/img/wn/01n@2x.png" class="wtr-icon"><button class="wtr-upd-btn">Обновить</button><button class="wtr-cls-btn">×</button></ul>
-                     </div>
-                     <ul class="feat-list">
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Ощущается как</span><span class="feat-val">-19.27 °C</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Ветер</span><span class="feat-val">4 м/c</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Облачность</span><span class="feat-val">0%</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Давление</span><span class="feat-val">1008 гПа</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Влаженость</span><span class="feat-val">72%</span></div>
-                        </li>
-                     </ul>
-                  </section>
-               </li>
-               <li class="wtr-block">
-                  <section class="wtr-block">
-                     <div class="wtr-header">
-                        <h3 class="wtr-city-name">New York</h3>
-                        <ul class="wtr-header"><span class="wtr-temp">4.1°C</span><img alt="Иконка погоды" src="http://openweathermap.org/img/wn/01d@2x.png" class="wtr-icon"><button class="wtr-upd-btn">Обновить</button><button class="wtr-cls-btn">×</button></ul>
-                     </div>
-                     <ul class="feat-list">
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Ощущается как</span><span class="feat-val">-1.83 °C</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Ветер</span><span class="feat-val">5.14 м/c</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Облачность</span><span class="feat-val">1%</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Давление</span><span class="feat-val">1034 гПа</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Влаженость</span><span class="feat-val">61%</span></div>
-                        </li>
-                     </ul>
-                  </section>
-               </li>
-               <li class="wtr-block">
-                  <section class="wtr-block">
-                     <div class="wtr-header">
-                        <h3 class="wtr-city-name">Paris</h3>
-                        <ul class="wtr-header"><span class="wtr-temp">10.7°C</span><img alt="Иконка погоды" src="http://openweathermap.org/img/wn/01d@2x.png" class="wtr-icon"><button class="wtr-upd-btn">Обновить</button><button class="wtr-cls-btn">×</button></ul>
-                     </div>
-                     <ul class="feat-list">
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Ощущается как</span><span class="feat-val">4.17 °C</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Ветер</span><span class="feat-val">6.69 м/c</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Облачность</span><span class="feat-val">0%</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Давление</span><span class="feat-val">1017 гПа</span></div>
-                        </li>
-                        <li>
-                           <div class="feat-cont"><span class="feat-name">Влаженость</span><span class="feat-val">50%</span></div>
-                        </li>
-                     </ul>
-                  </section>
-               </li>
+<head>
+   <link rel="icon" sizes="32x32" type="image/png" href="../img/favicon.png">
+   <meta charset="UTF-8">
+   <title>Weather Website</title>
+   <link href="../css/general.css" rel="stylesheet" type="text/css">
+   <link href="../css/main.css" rel="stylesheet" type="text/css">
+   <link href="../css/styles.css" rel="stylesheet" type="text/css">
+   <link href="../css/loader.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+<header>
+   <section id="header-block" class="wtr-list">
+      <h1 class="wtr-header-text">
+         Погода здесь
+      </h1>
+      <button id="update-main-btn" class="func-btn"><img class="block-icon" src="../img/update.png"></button>
+   </section>
+   <section class="wtr-list" id="wtr-main-block">
+      <div id="wtr-main" class="wtr-block">
+         <h2 class="wtr-city-name">Komendantsky aerodrom</h2>
+         <div class="main-block"><img class="wtr-icon" alt="Иконка погоды" src="http://openweathermap.org/img/wn/04d@2x.png"><span class="wtr-temp">-0.8°C</span></div>
+      </div>
+      <ul class="wtr-block">
+         <li class="feat-cont"><span class="feat-name">Ощущается как</span><span class="feat-val">-4.93 °C</span></li>
+         <li class="feat-cont"><span class="feat-name">Ветер</span><span class="feat-val">2.46 м/c</span></li>
+         <li class="feat-cont"><span class="feat-name">Облачность</span><span class="feat-val">100%</span></li>
+         <li class="feat-cont"><span class="feat-name">Давление</span><span class="feat-val">1014 гПа</span></li>
+         <li class="feat-cont"><span class="feat-name">Влаженость</span><span class="feat-val">82%</span></li>
+      </ul>
+   </section>
+</header>
+<main>
+   <section class="wtr-list">
+      <h2 id="wtr-fav-header-text" class="wtr-header-text wtr-block">
+         Избранное
+      </h2>
+      <div class="wtr-block wtr-list">
+         <label>
+            <input id="city-name-input" name="cityName" type="text" placeholder="Города">
+         </label>
+         <button id="add-city-btn" class="func-btn">Добавить</button>
+      </div>
+   </section>
+   <section>
+      <ul id="wtr-blocks-cont" class="wtr-list">
+         <li class="wtr-block">
+            <div class="wtr-header">
+               <h3 class="wtr-city-name">Yakutsk</h3>
+               <div class="wtr-header"><span class="wtr-temp">-11°C</span><img alt="Иконка погоды" src="http://openweathermap.org/img/wn/01d@2x.png" class="wtr-icon"><button class="wtr-upd-btn"><img class="block-icon" src="../img/update.png" alt="Обновить"></button><button class="wtr-cls-btn"><img class="block-icon" src="../img/close.png" alt="Закрыть"></button></div>
+            </div>
+            <ul class="feat-list">
+               <li class="feat-cont"><span class="feat-name">Ощущается как</span><span class="feat-val">-16.75 °C</span></li>
+               <li class="feat-cont"><span class="feat-name">Ветер</span><span class="feat-val">3 м/c</span></li>
+               <li class="feat-cont"><span class="feat-name">Облачность</span><span class="feat-val">0%</span></li>
+               <li class="feat-cont"><span class="feat-name">Давление</span><span class="feat-val">1026 гПа</span></li>
+               <li class="feat-cont"><span class="feat-name">Влаженость</span><span class="feat-val">40%</span></li>
             </ul>
-         </section>
-      </main>
-      <footer></footer>
-   </body>
+         </li>
+         <li class="wtr-block">
+            <div class="wtr-header">
+               <h3 class="wtr-city-name">Paris</h3>
+               <div class="wtr-header"><span class="wtr-temp">10.7°C</span><img alt="Иконка погоды" src="http://openweathermap.org/img/wn/01d@2x.png" class="wtr-icon"><button class="wtr-upd-btn"><img class="block-icon" src="../img/update.png" alt="Обновить"></button><button class="wtr-cls-btn"><img class="block-icon" src="../img/close.png" alt="Закрыть"></button></div>
+            </div>
+            <ul class="feat-list">
+               <li class="feat-cont"><span class="feat-name">Ощущается как</span><span class="feat-val">4.17 °C</span></li>
+               <li class="feat-cont"><span class="feat-name">Ветер</span><span class="feat-val">6.69 м/c</span></li>
+               <li class="feat-cont"><span class="feat-name">Облачность</span><span class="feat-val">0%</span></li>
+               <li class="feat-cont"><span class="feat-name">Давление</span><span class="feat-val">1017 гПа</span></li>
+               <li class="feat-cont"><span class="feat-name">Влаженость</span><span class="feat-val">50%</span></li>
+            </ul>
+         </li>
+         <li class="wtr-block">
+            <div class="wtr-header">
+               <h3 class="wtr-city-name">New York</h3>
+               <div class="wtr-header"><span class="wtr-temp">6.3°C</span><img alt="Иконка погоды" src="http://openweathermap.org/img/wn/04n@2x.png" class="wtr-icon"><button class="wtr-upd-btn"><img class="block-icon" src="../img/update.png" alt="Обновить"></button><button class="wtr-cls-btn"><img class="block-icon" src="../img/close.png" alt="Закрыть"></button></div>
+            </div>
+            <ul class="feat-list">
+               <li class="feat-cont"><span class="feat-name">Ощущается как</span><span class="feat-val">3.44 °C</span></li>
+               <li class="feat-cont"><span class="feat-name">Ветер</span><span class="feat-val">2.06 м/c</span></li>
+               <li class="feat-cont"><span class="feat-name">Облачность</span><span class="feat-val">90%</span></li>
+               <li class="feat-cont"><span class="feat-name">Давление</span><span class="feat-val">1020 гПа</span></li>
+               <li class="feat-cont"><span class="feat-name">Влаженость</span><span class="feat-val">81%</span></li>
+            </ul>
+         </li>
+      </ul>
+   </section>
+</main>
+<footer></footer>
+<!---->
+</body>
 </html>
