--- a/page.html
+++ b/page.html
@@ -6,41 +6,38 @@
     <meta charset="UTF-8">
     <title>Weather Website</title>
 
-    <link href="general.css" rel="stylesheet" type="text/css">
-    <link href="main.css" rel="stylesheet" type="text/css">
-    <link href="styles.css" rel="stylesheet" type="text/css">
-    <link href="loader.css" rel="stylesheet" type="text/css">
+    <link href="css/general.css" rel="stylesheet" type="text/css">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/loader.css" rel="stylesheet" type="text/css">
 
-    <script src="weather_dom.js" type="text/javascript"></script>
-    <script src="weather_req.js" type="text/javascript"></script>
-    <script src="weather_add_city.js" type="text/javascript"></script>
-    <script src="weather_update_main.js" type="text/javascript"></script>
-    <script src="weather.js" type="text/javascript"></script>
+    <script src="js/weather_dom.js" type="text/javascript"></script>
+    <script src="js/weather_req.js" type="text/javascript"></script>
+    <script src="js/weather_add_city.js" type="text/javascript"></script>
+    <script src="js/weather_update_main.js" type="text/javascript"></script>
+    <script src="js/weather.js" type="text/javascript"></script>
 </head>
 <body>
 <header>
-    <section class="wtr-list">
-        <h1 class="wtr-header-text wtr-block">
-            Погода здесь
-        </h1>
-
-        <div id="geo-btn-block" class="wtr-block">
-            <button id="update-main-btn" class="func-btn">Обновить геолокацию</button>
-        </div>
-    </section>
+        <section id="header-block" class="wtr-list">
+            <h1 class="wtr-header-text">
+                Погода здесь
+            </h1>
+            <button id="update-main-btn" class="func-btn"><img class="block-icon" src="img/update.png"></button>
+        </section>
 </header>
 
 <main>
     <section class="wtr-list">
-        <h2 class="wtr-header-text wtr-block">
+        <h2 id="wtr-fav-header-text" class="wtr-header-text wtr-block">
             Избранное
         </h2>
 
-        <div class="wtr-block">
+        <div class="wtr-block wtr-list">
             <label>
-                <input id="city-name-input" name="cityName" type="text" placeholder="Название города"/>
+                <input id="city-name-input" name="cityName" type="text" placeholder="Города"/>
             </label>
-            <button id="add-city-btn" class="func-btn">Добавить город</button>
+            <button id="add-city-btn" class="func-btn">Добавить</button>
         </div>
     </section>
 
