--- a/page.html
+++ b/page.html
@@ -49,5 +49,31 @@
 
 <footer>
 </footer>
+
+<template id="fav-city-block-tmpl">
+    <li class="wtr-block">
+        <div class="wtr-header">
+            <h3 class="wtr-city-name"></h3>
+            <div class="wtr-header"><span class="wtr-temp"></span><img alt="Иконка погоды" src="" class="wtr-icon"><button class="wtr-upd-btn"><img class="block-icon" src="../img/update.png" alt="Обновить"></button><button class="wtr-cls-btn"><img class="block-icon" src="../img/close.png" alt="Закрыть"></button></div>
+        </div>
+        <ul class="feat-list">
+        </ul>
+    </li>
+</template>
+
+<template id="main-city-block-tmpl">
+    <section class="wtr-list" id="wtr-main-block">
+        <div id="wtr-main" class="wtr-block">
+            <h2 class="wtr-city-name"></h2>
+            <div class="main-block"><img class="wtr-icon" alt="Иконка погоды" src=""><span class="wtr-temp"></span></div>
+        </div>
+        <ul class="wtr-block">
+        </ul>
+    </section>
+</template>
+
+<template id="wtr-feat-tmpl">
+    <li class="feat-cont"><span class="feat-name"></span><span class="feat-val"></span></li>
+</template>
 </body>
 </html>
