--- a/page.html
+++ b/page.html
@@ -54,9 +54,9 @@
     <li class="wtr-block">
         <div class="wtr-header">
             <h3 class="wtr-city-name"></h3>
-            <div class="wtr-header"><span class="wtr-temp"></span><img alt="Иконка погоды" src="" class="wtr-icon"><button class="wtr-upd-btn"><img class="block-icon" src="../img/update.png" alt="Обновить"></button><button class="wtr-cls-btn"><img class="block-icon" src="../img/close.png" alt="Закрыть"></button></div>
+            <div class="wtr-header"><span class="wtr-temp"></span><img alt="Иконка погоды" src="" class="wtr-icon"><button class="wtr-upd-btn"><img class="block-icon" src="img/update.png" alt="Обновить"></button><button class="wtr-cls-btn"><img class="block-icon" src="img/close.png" alt="Закрыть"></button></div>
         </div>
-        <ul class="feat-list">
+        <ul class="feat-list wtr-feat-list">
         </ul>
     </li>
 </template>
@@ -67,7 +67,7 @@
             <h2 class="wtr-city-name"></h2>
             <div class="main-block"><img class="wtr-icon" alt="Иконка погоды" src=""><span class="wtr-temp"></span></div>
         </div>
-        <ul class="wtr-block">
+        <ul class="wtr-block wtr-feat-list">
         </ul>
     </section>
 </template>
