--- a/lab2/lab2_page.html
+++ b/lab2/lab2_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <link rel="icon" sizes="32x32" type="image/png" href="img/favicon.png"/>
+    <link rel="icon" sizes="32x32" type="image/png" href="../img/favicon.png"/>
 
     <meta charset="UTF-8">
     <title>Weather Website</title>
@@ -11,20 +11,22 @@
     <link href="../css/styles.css" rel="stylesheet" type="text/css">
     <link href="../css/loader.css" rel="stylesheet" type="text/css">
 
-    <script src="weather_req.js" type="text/javascript"></script>
     <script src="weather_dom.js" type="text/javascript"></script>
+    <script src="weather_req.js" type="text/javascript"></script>
     <script src="weather_add_city.js" type="text/javascript"></script>
     <script src="weather_update_main.js" type="text/javascript"></script>
     <script src="weather.js" type="text/javascript"></script>
 </head>
 <body>
 <header>
-        <section id="header-block" class="wtr-list">
-            <h1 class="wtr-header-text">
-                Погода здесь
-            </h1>
-            <button id="update-main-btn" class="func-btn"><img class="block-icon" src="../img/update.png"></button>
-        </section>
+    <section id="header-block" class="wtr-list">
+        <h1 class="wtr-header-text">
+            Погода здесь
+        </h1>
+        <button id="update-main-btn" class="func-btn">
+            <img class="block-icon" src="../img/update.png">
+        </button>
+    </section>
 </header>
 
 <main>
@@ -35,7 +37,7 @@
 
         <div class="wtr-block wtr-list">
             <label>
-                <input id="city-name-input" name="cityName" type="text" placeholder="Город"/>
+                <input id="city-name-input" name="cityName" type="text" placeholder="Города"/>
             </label>
             <button id="add-city-btn" class="func-btn">Добавить</button>
         </div>
@@ -49,5 +51,68 @@
 
 <footer>
 </footer>
+
+<template id="fav-city-block-tmpl">
+    <li class="wtr-block">
+        <div class="wtr-header">
+            <h3 class="wtr-city-name"></h3>
+            <div class="wtr-header">
+                <span class="wtr-temp"></span>
+                <img alt="Иконка погоды" src="" class="wtr-icon">
+                <button class="wtr-upd-btn">
+                    <img class="block-icon" src="../img/update.png" alt="Обновить">
+                </button>
+                <button class="wtr-cls-btn">
+                    <img class="block-icon" src="../img/close.png" alt="Закрыть">
+                </button>
+            </div>
+        </div>
+        <ul class="feat-list wtr-feat-list">
+        </ul>
+    </li>
+</template>
+
+<template id="main-city-block-tmpl">
+    <section class="wtr-list wtr-main-block">
+        <div id="wtr-main" class="wtr-block">
+            <h2 class="wtr-city-name"></h2>
+            <div class="main-block">
+                <img class="wtr-icon" alt="Иконка погоды" src="">
+                <span class="wtr-temp"></span>
+            </div>
+        </div>
+        <ul class="wtr-block wtr-feat-list">
+        </ul>
+    </section>
+</template>
+
+<template id="wtr-feat-tmpl">
+    <li class="feat-cont">
+        <span class="feat-name"></span>
+        <span class="feat-val"></span>
+    </li>
+</template>
+
+<template id="wtr-loader-tmpl">
+    <div class="update-block wtr-block">
+        <p>Подождите, данные загружаются</p>
+        <div class="loader"></div>
+    </div>
+</template>
+
+<template id="wtr-main-loader-tmpl">
+    <section class="wtr-list wtr-main-block">
+        <div class="update-block wtr-block">
+            <p>Подождите, данные загружаются</p>
+            <div class="loader"></div>
+        </div>
+
+        <div class="update-block wtr-block">
+            <p>Подождите, данные загружаются</p>
+            <div class="loader"></div>
+        </div>
+    </section>
+</template>
+
 </body>
 </html>
