--- a/v2/page.html
+++ b/v2/page.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <link rel="icon" sizes="32x32" type="image/png" href="../img/favicon.png"/>
+    <link rel="icon" sizes="32x32" type="image/png" href="ddimg/favicon.png"/>
 
     <meta charset="UTF-8">
     <title>Weather Website</title>
 
-    <link href="../css/general.css" rel="stylesheet" type="text/css">
-    <link href="../css/main.css" rel="stylesheet" type="text/css">
-    <link href="../css/styles.css" rel="stylesheet" type="text/css">
-    <link href="../css/loader.css" rel="stylesheet" type="text/css">
+    <link href="css/general.css" rel="stylesheet" type="text/css">
+    <link href="css/main.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/loader.css" rel="stylesheet" type="text/css">
 
     <script src="weather_dom.js" type="text/javascript"></script>
     <script src="weather_req.js" type="text/javascript"></script>
@@ -24,7 +24,7 @@
             Погода здесь
         </h1>
         <button id="update-main-btn" class="func-btn">
-            <img class="block-icon" src="../img/update.png">
+            <img class="block-icon" src="img/update.png">
         </button>
     </section>
 </header>
@@ -60,10 +60,10 @@
                 <span class="wtr-temp"></span>
                 <img alt="Иконка погоды" src="" class="wtr-icon">
                 <button class="wtr-upd-btn">
-                    <img class="block-icon" src="../img/update.png" alt="Обновить">
+                    <img class="block-icon" src="img/update.png" alt="Обновить">
                 </button>
                 <button class="wtr-cls-btn">
-                    <img class="block-icon" src="../img/close.png" alt="Закрыть">
+                    <img class="block-icon" src="img/close.png" alt="Закрыть">
                 </button>
             </div>
         </div>
