--- a/v1/page.html
+++ b/v1/page.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-   <link rel="icon" sizes="32x32" type="image/png" href="../img/favicon.png">
+   <link rel="icon" sizes="32x32" type="image/png" href="img/favicon.png">
    <meta charset="UTF-8">
    <title>Weather Website</title>
-   <link href="../css/general.css" rel="stylesheet" type="text/css">
-   <link href="../css/main.css" rel="stylesheet" type="text/css">
-   <link href="../css/styles.css" rel="stylesheet" type="text/css">
-   <link href="../css/loader.css" rel="stylesheet" type="text/css">
+   <link href="css/general.css" rel="stylesheet" type="text/css">
+   <link href="css/main.css" rel="stylesheet" type="text/css">
+   <link href="css/styles.css" rel="stylesheet" type="text/css">
+   <link href="css/loader.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <header>
@@ -88,6 +88,5 @@
    </section>
 </main>
 <footer></footer>
-<!---->
 </body>
 </html>
